# bot-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yml
src/: main.rs
src/adapters/register/: dynamodb.rs  mod.rs
src/adapters/register/dynamodb/: mod.rs
src/adapters/register/local/: mod.rs
src/domain/: app.rs  mod.rs  register.rs  status_event.rs
src/domain/events/: create.rs  help.rs  list.rs  mod.rs  remove.rs  status.rs
src/domain/register/: create_entry.rs  logic.rs  mod.rs
src/domain/register/events/: create.rs  list.rs  mod.rs  remove.rs
src/ports/clients/: mod.rs
src/ports/clients/discord/: client.rs  event.rs  mod.rs  presence_update.rs
src/ports/clients/discord/commands/: add.rs  help.rs  list.rs  mod.rs  remove.rs
src/ports/clients/discord/utils/: messages.rs  user.rs
