[package]
name = "register-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.5"
aws-config = { version= "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.86.0"

[dev-dependencies]
mockall = "0.13.1"
aws-smithy-mocks = "0.1.1"
aws-sdk-dynamodb = { version="1.86.0", features = ["test-util"] }